--- a/target_website/index.html
+++ b/target_website/index.html
@@ -59,8 +59,7 @@
             
             <p>I'm a puzzle, a mystery to untangle,
                 Among these letters, you must find the angle.
-                Bold they stand, unique and true,
-                But the order's amiss, a task for you.</p>
+                Bold they stand, unique and true,</p>
             <p>In the alphabet's realm, your mission takes flight,
                 Arrange them rightly, like day turns to night.
                 Each bold letter stands, a hint to portray,
